--- a/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
+++ b/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
@@ -15,7 +15,7 @@
         <ion-col sizeXl="6" sizeSm="6" style="margin-top: 20px;" >
           
           <img class="qr-animation" src="../../../assets/icon/scan.png" alt="">
-          <ion-button (click)="onClick('scancorrecto')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
+          <ion-button (click)="onClick('scancorrecto')" (click)="guardarStringEnStorage('Guardada')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
             Escanear QR
           </ion-button>
         </ion-col>
