--- a/src/app/pages/estudiante/estudiante.page.html
+++ b/src/app/pages/estudiante/estudiante.page.html
@@ -10,7 +10,7 @@
           <form [formGroup]="ionicForm" novalidate>
 
             
-              <ion-input style="text-align: start; color:#fff; font-weight: bolder ;" 
+              <ion-input style="text-align: start; color:#fff; font-weight: bolder ;" labelPlacement="floating"
                 helperText="Formato: ayuda@dominio.cl" label="E-mail" aria-label="Email" formControlName="email"
                 class="input"></ion-input>
             
