--- a/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
+++ b/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
@@ -16,7 +16,7 @@
           
 
           <img class="qr-animation" src="../../../assets/icon/scan.png" alt="">
-          <ion-button (click)="onClick('scancorrecto')" (click)="guardarStringEnStorage('Guardada')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
+          <ion-button (click)="onClick('scancorrecto'); guardarStringEnStorage('Guardada')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
             Escanear QR
           </ion-button>
         </ion-col>
