--- a/src/app/pages/scancorrecto/scancorrecto.page.html
+++ b/src/app/pages/scancorrecto/scancorrecto.page.html
@@ -13,7 +13,7 @@
         <ion-col sizeXl="3" sizeSm="3"></ion-col>
           <ion-text color="primary">
             
-              <h1 style="text-align: center; color: #AAE7E3;">Has quedado presente en la clase inglés intermedio</h1>
+              <h1 style="text-align: center; color: #AAE7E3;">Has quedado presente en la clase de Arquitectura</h1>
 
             <ion-button (click)="onClick('pagina-scan-qr')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
               Atrás
