--- a/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
+++ b/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
@@ -31,4 +31,9 @@
   <div *ngIf="!dato">
     <p>No hay asistencias guardadas Localmente </p>
   </div>
+  <h1>ListadeAsistenciasFire</h1>
+  
+  <button (click)="guardarasis()">
+    Guardar nico
+  </button>
 </ion-content>
