--- a/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
+++ b/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
@@ -3,7 +3,8 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="menu"></ion-menu-button>
     </ion-buttons>
-    <ion-title style="color: #AAE7E3; text-align: center; justify-content: center; margin-right: 40px;">Escaneo QR</ion-title>
+    <ion-title style="color: #AAE7E3; text-align: center; justify-content: center; margin-right: 40px;">Escaneo
+      QR</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,18 +12,31 @@
   <div style="text-align: center;">
     <ion-grid [fixed]="true">
       <ion-row>
-        <ion-col sizeXl="3" sizeSm="3"></ion-col>
-        <ion-col sizeXl="6" sizeSm="6" style="margin-top: 20px;" >
-          
-
-          <img class="qr-animation" src="../../../assets/icon/scan.png" alt="">
-          <ion-button (click)="onClick('scancorrecto')" (click)="guardarDato()" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
-            Escanear QR
-          </ion-button>
+        <ion-col sizeXl="4" sizeMd="4" sizeSm="4">
+          <ion-card style="height: 330px;">
+            <img alt="Silhouette of mountains" src="../../assets/icon/calidad.jpg" />
+            <ion-card-header>
+              <ion-card-title>Portafolio</ion-card-title>
+            </ion-card-header>
+            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis('Portafolio')" (click)="guardarDato()"
+              style="margin-top: 20px;" fill="solid" shape="round" color="tertiary" type="submit">
+              Escanear QR
+            </ion-button>
+          </ion-card>
         </ion-col>
-        <ion-col sizeXl="3" sizeSm="3"></ion-col>
+        <ion-col sizeXl="4" sizeMd="4" sizeSm="4">
+          <ion-card style="height: 330px;">
+            <img alt="Silhouette of mountains" src="../../assets/icon/web.jpg" />
+            <ion-card-header>
+              <ion-card-title>Arquitectura</ion-card-title>
+            </ion-card-header>
+            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis('Arquitectura')" (click)="guardarDato()"
+              style="margin-top: 20px;" fill="solid" shape="round" color="tertiary" type="submit">
+              Escanear QR
+            </ion-button>
+          </ion-card>
+        </ion-col>
       </ion-row>
-      
     </ion-grid>
   </div>
   <div *ngIf="dato">
@@ -31,9 +45,4 @@
   <div *ngIf="!dato">
     <p>No hay asistencias guardadas Localmente </p>
   </div>
-  <h1>ListadeAsistenciasFire</h1>
-  
-  <button (click)="guardarasis()">
-    Guardar nico
-  </button>
 </ion-content>
