--- a/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
+++ b/src/app/pages/pagina-scan-qr/pagina-scan-qr.page.html
@@ -18,7 +18,7 @@
             <ion-card-header>
               <ion-card-title>Portafolio</ion-card-title>
             </ion-card-header>
-            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis('Portafolio')" (click)="guardarDato()"
+            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis()" (click)="guardarDato()"
               style="margin-top: 20px;" fill="solid" shape="round" color="tertiary" type="submit">
               Escanear QR
             </ion-button>
@@ -30,7 +30,7 @@
             <ion-card-header>
               <ion-card-title>Arquitectura</ion-card-title>
             </ion-card-header>
-            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis('Arquitectura')" (click)="guardarDato()"
+            <ion-button (click)="onClick('scancorrecto')" (click)="guardarasis()" (click)="guardarDato()"
               style="margin-top: 20px;" fill="solid" shape="round" color="tertiary" type="submit">
               Escanear QR
             </ion-button>
@@ -38,11 +38,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  </div>
-  <div *ngIf="dato">
-    <p>Asistencias Guardadas Localmente: {{ dato }}</p>
-  </div>
-  <div *ngIf="!dato">
-    <p>No hay asistencias guardadas Localmente </p>
   </div>
 </ion-content>
