--- a/src/app/pages/asignaturas/asignaturas.page.scss
+++ b/src/app/pages/asignaturas/asignaturas.page.scss
@@ -13,3 +13,11 @@ ion-item {
     margin: 5px 0; /* Espacio vertical entre cards */
   }
   
+  ion-footer {
+    background: transparent !important;
+    text-align: center;
+  }
+  
+  ion-toolbar {
+    background: transparent !important;
+  }
