--- a/src/app/pages/estudiante/estudiante.page.html
+++ b/src/app/pages/estudiante/estudiante.page.html
@@ -3,7 +3,7 @@
     <ion-grid [fixed]="true">
       <ion-row>
         
-        <ion-col style="background-color: #00776E;margin-top: 20px; border-radius: 15px; height: 400px; width: 500px;"
+        <ion-col style="background-color: #00776E;margin-top: 20px; border-radius: 15px; height: 450px; width: 500px;"
           class="ion-padding borde">
           <img src="../../../assets/icon/iconoestudiante.png" alt="" height="100px">
 
@@ -34,7 +34,8 @@
 
               <div>
                 <a style="color: #fff; font-size: 15px;" fill="outline" routerLink="/recuperar-contra">Recuperar
-                  contraseña</a>
+                  contraseña</a> <br> 
+                <a style="color: #fff; font-size: 15px;" fill="outline" routerLink="/crear"> Crea nueva cuenta</a>
               </div>
 
               <div style="text-align: center;">
@@ -50,4 +51,6 @@
       </ion-row>
     </ion-grid>
   </div>
+
+  
 </ion-content>
