--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ion-app>
   <app-menu></app-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
+  <app-menu-inferior></app-menu-inferior>
 </ion-app>
