--- a/src/app/pages/perfil-estudiante/perfil-estudiante.page.html
+++ b/src/app/pages/perfil-estudiante/perfil-estudiante.page.html
@@ -13,7 +13,7 @@
         <div style="display: flex; flex-direction: column; align-items: center;">
           <img src="../../../assets/icon/iconoestudiante.png" alt="" height="100px">
           <form #miFormulario="ngForm" (ngSubmit)="onSubmit()" style="width: 100%; max-width: 400px; color: #003834; font-weight: 700;">
-            <ion-input style="text-align: start; margin-top: 30px;" placeholder="gaby@gmail.com" label="E-mail" type="email"
+            <ion-input style="text-align: start; margin-top: 30px;" placeholder="nicolas@gmail.com" label="E-mail" type="email"
               aria-label="Email" name="email" disabled="true" [(ngModel)]="usuario.username"></ion-input>
 
             <ion-input style="text-align: start;" placeholder="********" label="Contraseña" type="password"
@@ -24,5 +24,10 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-fab vertical="bottom" horizontal="center">
+    <ion-fab-button routerLink="/pagina-scan-qr" style="padding: 0;">
+      <ion-img style="background-color: #00BFB1;" src="assets/icon/QR.png"></ion-img>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
 
