--- a/src/app/pages/scancorrecto/scancorrecto.page.html
+++ b/src/app/pages/scancorrecto/scancorrecto.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-buttons slot="start">
-      <ion-menu-button menu="menues" class="custom-menu-button"></ion-menu-button>
+      <ion-menu-button menu="menues" class="custom-menu-button" style="color: #00BFB1;"></ion-menu-button>
     </ion-buttons>
     <ion-title style="text-align: center; color: #AAE7E3;">Escaneo Correcto</ion-title>
   </ion-toolbar>
@@ -23,4 +23,10 @@
       </ion-row>
     </ion-grid>
   </div>
+
+  <ion-fab vertical="bottom" horizontal="center">
+    <ion-fab-button routerLink="/pagina-scan-qr" style="padding: 0;">
+      <ion-img style="background-color: #00BFB1;" src="assets/icon/QR.png"></ion-img>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
