--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,7 +9,7 @@
       <ion-menu-toggle autoHide="true">
         <ion-item routerLink="/pagina-scan-qr"><ion-icon name="qr-code-sharp" slot="start" color="dark"></ion-icon> Escanear QR</ion-item>
         <ion-item routerLink="/perfil-estudiante"><ion-icon name="person-sharp" slot="start" color="dark"></ion-icon> Perfil</ion-item>
-        <ion-item routerLink="/asignaturas"><ion-icon name="library" slot="start" color="dark"></ion-icon>  Asignatura</ion-item>
+        <ion-item routerLink="/asignaturas"><ion-icon name="library" slot="start" color="dark"></ion-icon>  Asistencia</ion-item>
         <ion-item (click)="onClick()"  routerLink="/"><ion-icon name="log-out-sharp" slot="start" color="dark"></ion-icon> Cerrar sesion</ion-item>
       </ion-menu-toggle>
     </ion-list>
