--- a/src/app/pages/asignaturas/asignaturas.page.html
+++ b/src/app/pages/asignaturas/asignaturas.page.html
@@ -5,7 +5,7 @@
       
 
     </ion-buttons>
-    <ion-title style="color: #AAE7E3; text-align: center; justify-content: center; margin-right: 30px;">Asignaturas</ion-title>
+    <ion-title style="color: #AAE7E3; text-align: center; justify-content: center; margin-right: 30px;">Asistencia</ion-title>
   </ion-toolbar>
 </ion-header>
 
