--- a/src/app/pages/scancorrecto/scancorrecto.page.html
+++ b/src/app/pages/scancorrecto/scancorrecto.page.html
@@ -15,7 +15,7 @@
             
               <h1 style="text-align: center; color: #AAE7E3;">Has quedado presente en la clase</h1>
 
-            <ion-button (click)="onClick('pagina-scan-qr')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
+            <ion-button (click)="onClick('asignaturas')" style="margin-top: 20px;" expand="full" fill="solid" shape="round" color="tertiary" type="submit">
               Atrás
             </ion-button>
           </ion-text>
